--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,21 @@
 body {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+label {
+  display: block;
+}
+
+nav a {
+  display: inline-block;
+  margin: 1em;
+}
+
+form div {
+  margin: 1em;
+  display: inline-block;
 }
